--- a/index.html
+++ b/index.html
@@ -1,96 +1,251 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<title>Personal Web page</title>
-<style type ="text/css">
-body
-{
-width:1000px;
-}
-table , th, td
-{
-border-style: solid;
-border-color: black;
-}
-ul
-{
-   list-style-type:square;
-}
-h3
-{
-	font-style:italic;
-	color:rgb(110, 129, 110);
-}
-img
-{
-  float:right;
-  width:200px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GanaSasank's - Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body style="background-color: whitesmoke">
-<p style="font-size: medium;font-style:unset;"">I am GanaSasank Reddy.I am pursing my BE in New Horizon College of Engineering,Bengaluru.I am from Pulivendula.</p>
-<img id="im" src="https://media.licdn.com/dms/image/D5603AQE7bglfunwz2g/profile-displayphoto-shrink_400_400/0/1670379423102?e=1684368000&v=beta&t=0y8Xl0S4Xm6WNMf2MoIMnBrrvTLgwoXAUVM3d2qFxS0" alt="image not found"></img>
-<ol type="1">
-<li><a href="#edu">Educational Details</a></li>
-<li><a href="#hob">Hobbies</a></li>
-<!-- <li><a href="#achievements">Achievements</a></li> -->
-<li><a href="https://www.instagram.com/siufan_lung/">Click for Instagram profile </a></li>
-<li><a href="https://www.youtube.com/channel/UCj-XS8cB_ToGrcFdI6YV3Ng/featured">Click here for my YOUTUBE channel</a></li>
-</ol>
-<article>
-<section id="edu">
-<h3 style="color:rgb(49, 4, 94)">My Educationals details are</h3>
-<table cellpadding="10px">
-<tr>
-   <th style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Education</th>
-   <th style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">University/College</th>
-   <th style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Year Of Passing</th>
-   <th style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">CGPA</th>
-</tr>
-<tr>
-   <td>Andhra Pradesh Board of Secondary Education,Andhra Pradesh</td>
-   <td>Narayana Concept School,Pulivendula</td>
-   <td>2017</td>
-   <td>9.5</td>
-</tr>
-<tr>
-   <td>The Board of Intermediate Education,Andhra Pradesh</td>
-   <td>Sri Vaishinavi Abhyaas Jr College,Guntur</td>
-   <td>2019</td>
-   <td>9.42</td>
-</tr>
-<tr>
-   <td> Bachelor of Engineering</td>
-   <td>New Horizon College of Engineering,Banglore</td>
-   <td>Pursing</td>
-   <td>N\A</td>
-</tr>
-</table>
-</section>
-<section id="hob">
-<h3>Hobbies are</h3>
-<ul>
-    <li>Knowing about Space</li>
-   <li>Driving</li>
-   <li>Listening Music</li>
-   <li>Video Editing</li>
-</ul>
-</section>
-<!-- <section id="achievements">
-<h3>Achievements are</h3>
-<ol> 
-<li></li>
-<li></li>
-<ol>
-</section> -->
-<style>
-    #im{
-    float: right;
-    width: 200px;
-    border: whitesmoke;
-    border-radius: 132px;
-    }
-</style>
+
+<body style="background-color:whitesmoke;">
+    <header id="name_ad">
+        <h3 style="font-family: 'Times New Roman', Times, serif;">GanaSasank Reddy Gajjala</h3>
+        ByPass Road, Pulivendula, Andhra Pradesh, 516390
+        <div style="align-items: center;display: inline;">
+            <p><img width="20" height="20" src="https://img.icons8.com/android/24/FFFFFF/smartphone.png"
+                    alt="smartphone" /> +918500042031
+                <img width="24" height="24" src="https://img.icons8.com/material-sharp/24/FFFFFF/mail.png"
+                    alt="mail" /><a href="" style="color: white;"> ganasasankforintern@gmail.com </a>
+                <img width="24" height="24" src="https://img.icons8.com/ios-filled/24/FFFFFF/linkedin.png"
+                    alt="linkedin" />
+                <a href="https://www.linkedin.com/in/gana-sasank-reddy-18071b219/" target="_blank "
+                    style="color: white;">
+                    LinkedIn Profile </a>
+                <img width="24" height="24" src="https://img.icons8.com/glyph-neue/24/FFFFFF/github.png"
+                    alt="github" /><a href="https://github.com/GanaSasank" target="_blank" style="color: white;"> Github
+                    Profile </a>
+            </p>
+        </div>
+    </header>
+
+    <section id="education">
+        <h3><strong>Education</strong></h3>
+        <table>
+            <tr>
+                <td><strong>New Horizon College of Engineering</strong></td>
+                <td>August 2019 – July 2023</td>
+            </tr>
+            <tr>
+                <td>Bachelor of Engineering in Information Science Engineering</td>
+                <td><strong>CGPA: 9.22 </strong></td>
+            </tr>
+            <tr>
+                <td>Bangalore, Karnataka, India</td>
+            </tr>
+            <tr>
+                <td><strong>Sri Vaishnavi Abhyaas Jr College</strong></td>
+                <td>June 2017 – May 2019</td>
+            </tr>
+            <tr>
+                <td>Pre-University course, Maths-Physics-Chemistry</td>
+                <td><strong>CGPA: 9.42</strong></td>
+            </tr>
+            <tr>
+                <td>Guntur, Andhra Pradesh, India</td>
+            </tr>
+            <tr>
+                <td><strong>Narayana Concept School</strong></td>
+                <td>May 2019</td>
+            </tr>
+            <tr>
+                <td>10th grade</td>
+                <td><strong>CGPA: 9.5 </strong></td>
+            </tr>
+            <tr>
+                <td>Pulivendula, Andhra Pradesh, India</td>
+            </tr>
+        </table>
+    </section>
+    <section id="technical-skills">
+        <h3><strong>Technical Skills </strong></h3>
+        <ul>
+            <li><strong>Languages:</strong> Python, Java, C, HTML/CSS, JavaScript, SQL, NoSQL, PHP</li>
+            <li><strong>Developer Tools:</strong> VS Code, Eclipse, Google Cloud Platform, Android Studio, Postman,
+                XAMPP</li>
+            <li><strong>Technologies/Frameworks:</strong> Node.JS, MongoDB, GitHub</li>
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h3><strong>Experience</strong></h3>
+        <table>
+            <tr>
+                <td><strong>Vervenest Technologies Pvt. Ltd</strong></td>
+                <td>February 2023 – April 2023</td>
+            </tr>
+            <tr>
+                <td>Web Developer Intern</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>As a Chatbot Developer, my primary responsibility was to design and implement conversational
+                            interfaces using PHP.</li>
+                        <li>I collaborated with a team of experienced developers and interacted closely with the clients
+                            to understand their requirements.</li>
+                        <li>Using PHP, I developed chat-bot functionalities that encompassed natural language
+                            processing, intent recognition, and response generation.</li>
+                        <li>I gained experience in deploying chatbots on local servers.</li>
+                    </ul>
+                    Technologies worked on: JavaScript, PHP, XAMPP
+                </td>
+            </tr>
+        </table>
+    </section>
+
+
+
+    <section id="experience">
+        <h3><strong>Projects</strong></h3>
+        <table>
+            <tr>
+                <td><strong>Website Chat-bots</strong></td>
+            </tr>
+            <tr>
+                <td>HTML, CSS, PHP, JavaScript, XAMPP</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>As a Chatbot Developer, my primary responsibility was to design and implement conversational
+                            interfaces using PHP.</li>
+                        <li>This involved conducting thorough research and analysis to identify the most effective
+                            replies for the specific queries of
+                            the users.</li>
+                        <li>Using PHP, I developed chat-bot functionalities that encompassed natural language
+                            processing, intent recognition, and response generation.</li>
+                        <li>I gained experience in deploying chatbots on local servers.</li>
+                    </ul>
+                    Technologies worked on: JavaScript, PHP, XAMPP
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td><strong>No Key - Smart Door Unlock System</strong></td>
+            </tr>
+            <tr>
+                <td>Java, Android Studio, Arduino coding</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Created an Android application using Java and Android Studio to connect to unlock solenoid
+                            lock.</li>
+                        <li>Fingerprint labeling embellishes the safety of a Door and makes it likely only for a few
+                            picked nations to use the Door.</li>
+                        <li>Thus, by achieving this comparably inexpensive and surely free scheme on a Door, individuals
+                            can guarantee much better
+                            safety and uniqueness than that offered by a normal lock and key.</li>
+                        <li>This was a team project of 4 people including me, completed in March 2023.</li>
+                        <li>Link for GitHub Repository: <img width="24" height="24"
+                                src="https://img.icons8.com/ios-filled/24/1A1A1A/github.png" alt="github" /> <a
+                                href="https://github.com/GanaSasank/Security_Device_Using_Bluetooth_and_AndroidApplication_Involved_with_Solenoid_Lock"
+                                target="_blank">No Key - Smart Door Unlock System</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td><strong>Finance App</strong></td>
+            </tr>
+            <tr>
+                <td>Java, Android Studio, Firebase Email Authentication, AlphaVantage Api Service</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Created an Android application using Java and Android Studio to get the stats of a stock and
+                            its present value in the
+                            market.</li>
+                        <li>It works for authenticated users who registered in the application, this is achieved by
+                            using Google’s Firebase Console</li>
+                        <li>This was an individual project completed in December 2021.</li>
+                        <li>This was a team project of 4 people including me, completed in March 2023.</li>
+                        <li>Link for GitHub Repository: <img width="24" height="24"
+                                src="https://img.icons8.com/ios-filled/24/1A1A1A/github.png" alt="github" /> <a
+                                href="https://github.com/GanaSasank/Sample_Finance_App" target="_blank">Finance App</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td><strong>Weather Forecast Application</strong></td>
+            </tr>
+            <tr>
+                <td>Java, Android Studio,Google’s Firebase Console, File-Handling</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Created an Android application using Java and Android Studio to set and get data into a text
+                            file.</li>
+                        <li>I used Android studio to develop this application and language used to develop is Java.</li>
+                        <li>This was an individual project completed in June 2021.</li>
+                        <li>Link for GitHub Repository: <img width="24" height="24"
+                                src="https://img.icons8.com/ios-filled/24/1A1A1A/github.png" alt="github" /> <a
+                                href="https://github.com/GanaSasank/Weather_Forecast_Application"
+                                target="_blank">Weather Forecast Application</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td><strong>Mini e-book</strong></td>
+            </tr>
+            <tr>
+                <td>C language, Data Structures</td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <ul>
+                        <li>Modules 1.Personal Book of Thoughts 2.Timer 3.A two player game 4.Calculator available in
+                            smart phones
+                            5.Information book.</li>
+                        <li>Developed a program that contains 5 functionalities which are necessary</li>
+                        <li>This was an individual project completed in January 2020.</li>
+                        <li>Link for GitHub Repository: <img width="24" height="24"
+                                src="https://img.icons8.com/ios-filled/24/1A1A1A/github.png" alt="github" /> <a
+                                href="https://github.com/GanaSasank/Mini_e-book" target="_blank">Mini e-book</a>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </section>
+
+
+
+    <section id="contact">
+        <!-- Contact section goes here -->
+    </section>
+
+    <footer>
+        <!-- Footer goes here -->
+    </footer>
+
+    <!-- Bootstrap JS and jQuery (for Bootstrap components) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-</html> 
+
+</html>
